--- a/backend/mail/package.json
+++ b/backend/mail/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user",
+  "name": "mail",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,21 +13,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "amqplib": "^0.10.9",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.7"
+  },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.96",
-    "@types/redis": "^4.0.10",
+    "@types/nodemailer": "^7.0.2",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.10"
-  },
-  "dependencies": {
-    "amqplib": "^0.10.9",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "redis": "^5.8.2"
   }
 }
